force-app/main/default/objects/Job_Application__c.object
<CustomObject>
    <fields>
        <fullName>Average_Review_Score__c</fullName>
        <formula>Total_Review_Score__c / Total_Reviews__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Review Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate</label>
        <referenceTo>Candidate__c</referenceTo>
        <relationshipLabel>Job Applications</relationshipLabel>
        <relationshipName>Job_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Candidate__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Application_Number__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Application Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>Candidate__r.First_Name__c &amp; &quot; &quot; &amp; Candidate__r.Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Candidate__r.Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Position</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Job Applications</relationshipLabel>
        <relationshipName>Job_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <formula>IF(

Average_Review_Score__c &gt;= 3.5,

IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;Green&quot;),

IF(

Average_Review_Score__c &gt;= 2.5,

IMAGE(&quot;/img/samples/light_yellow.gif&quot;, &quot;Yellow&quot;),

IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;Red&quot;) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Phone Screen</fullName>
                </value>
                <value>
                    <fullName>Schedule Interviews</fullName>
                </value>
                <value>
                    <fullName>Interviews Completed</fullName>
                </value>
                <value>
                    <fullName>Offer Extended</fullName>
                </value>
                <value>
                    <fullName>Closed - Rejected</fullName>
                </value>
                <value>
                    <fullName>Closed - Accepted</fullName>
                </value>
                <value>
                    <fullName>Closed - Declined</fullName>
                </value>
                <value>
                    <fullName>Closed - Position Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>In Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Review_Score__c</fullName>
        <label>Total Review Score</label>
        <summarizedField>Review__c.Overall_Review_Score__c</summarizedField>
        <summaryForeignKey>Review__c.Job_Application__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Reviews__c</fullName>
        <label>Total Reviews</label>
        <summaryForeignKey>Review__c.Job_Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Job Application</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>APP-{0000}</displayFormat>
        <label>Job Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Applications</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>